effects all areas but rest of function doesnt seem to work

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <p><span class="time">9</span>AM: </p>
         </div>
         <div class="task">
-          <input type="text" id="taskInput">
+          <input type="text" class="taskInput">
         </div>
         <div class="submit">
           <button type="button"> Save</button>
@@ -46,7 +46,7 @@
           <p><span class="time">10</span>AM:  </p>
         </div>
         <div class="task">
-          <input type="text" id="taskInput">
+          <input type="text" class="taskInput">
         </div>
 
         <div class="submit">
@@ -58,7 +58,7 @@
           <p><span class="time">11</span>AM:  </p>
         </div>
         <div class="task">
-          <input type="text" id="taskInput">
+          <input type="text" class="taskInput">
         </div>
 
         <div class="submit">
@@ -70,7 +70,7 @@
           <p><span class="time">12</span>PM:  </p>
         </div>
         <div class="task">
-          <input type="text" id="taskInput">
+          <input type="text" class="taskInput">
         </div>
 
         <div class="submit">
@@ -82,7 +82,7 @@
           <p> <span class="time">1</span>PM:  </p>
         </div>
         <div class="task">
-          <input type="text" id="taskInput">
+          <input type="text" class="taskInput">
         </div>
 
         <div class="submit">
@@ -94,7 +94,7 @@
           <p> <span class="time">2</span>PM:  </p>
         </div>
         <div class="task">
-          <input type="text" id="taskInput">
+          <input type="text" class="taskInput">
         </div>
 
         <div class="submit">
@@ -106,7 +106,7 @@
           <p> <span class="time">3</span>PM:  </p>
         </div>
         <div class="task">
-          <input type="text" id="taskInput">
+          <input type="text" class="taskInput">
         </div>
 
         <div class="submit">
@@ -118,7 +118,7 @@
           <p> <span class="time">4</span>PM:  </p>
         </div>
         <div class="task">
-          <input type="text" id="taskInput">
+          <input type="text" class="taskInput">
         </div>
 
         <div class="submit">
@@ -130,7 +130,7 @@
           <p> <span class="time">5</span>PM:  </p>
         </div>
         <div class="task">
-          <input type="text" id="taskInput">
+          <input type="text" class="taskInput">
         </div>
 
         <div class="submit">
