need to figure out how to remove the span from time[i]

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <!-- Timeblocks go here -->
       <div class="rows">
         <div class="hour">
-          <p><span class="time">9</span>AM: </p>
+          <p><span class="time">09</span>00</p>
         </div>
         <div class="task">
           <input type="text" class="taskInput">
@@ -43,7 +43,7 @@
       </div>
       <div class="rows"> 
         <div class="hour">
-          <p><span class="time">10</span>AM:  </p>
+          <p><span class="time">10</span>00</p>
         </div>
         <div class="task">
           <input type="text" class="taskInput">
@@ -55,7 +55,7 @@
       </div>
       <div class="rows">
         <div class="hour">
-          <p><span class="time">11</span>AM:  </p>
+          <p><span class="time">11</span>00</p>
         </div>
         <div class="task">
           <input type="text" class="taskInput">
@@ -67,7 +67,7 @@
       </div>
       <div class="rows">
         <div class="hour">
-          <p><span class="time">12</span>PM:  </p>
+          <p><span class="time">12</span>00</p>
         </div>
         <div class="task">
           <input type="text" class="taskInput">
@@ -79,7 +79,7 @@
       </div>
       <div class="rows">
         <div class="hour">
-          <p> <span class="time">1</span>PM:  </p>
+          <p> <span class="time">13</span>00</p>
         </div>
         <div class="task">
           <input type="text" class="taskInput">
@@ -91,7 +91,7 @@
       </div>
       <div class="rows">
         <div class="hour">
-          <p> <span class="time">2</span>PM:  </p>
+          <p> <span class="time">14</span>00</p>
         </div>
         <div class="task">
           <input type="text" class="taskInput">
@@ -103,7 +103,7 @@
       </div>
       <div class="rows">
         <div class="hour">
-          <p> <span class="time">3</span>PM:  </p>
+          <p> <span class="time">15</span>00</p>
         </div>
         <div class="task">
           <input type="text" class="taskInput">
@@ -115,7 +115,7 @@
       </div>
       <div class="rows">
         <div class="hour">
-          <p> <span class="time">4</span>PM:  </p>
+          <p> <span class="time">16</span>00</p>
         </div>
         <div class="task">
           <input type="text" class="taskInput">
@@ -127,7 +127,7 @@
       </div>
       <div class="rows">
         <div class="hour">
-          <p> <span class="time">5</span>PM:  </p>
+          <p> <span class="time">17</span>00</p>
         </div>
         <div class="task">
           <input type="text" class="taskInput">
