core functionality down

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./reset.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -32,109 +33,109 @@
       <!-- Timeblocks go here -->
       <div class="rows">
         <div class="hour">
-          <p><span class="time">09</span>00</p>
+          <p>9AM</p>
         </div>
         <div class="task">
-          <input type="text" class="taskInput">
+          <input type="text" data-hour="09" class="taskInput">
         </div>
         <div class="submit">
-          <button type="button"> Save</button>
+          <button type="button" class="saveBtn" data-btn="09"> Save</button>
         </div>
       </div>
       <div class="rows"> 
         <div class="hour">
-          <p><span class="time">10</span>00</p>
+          <p>10AM</p>
         </div>
         <div class="task">
-          <input type="text" class="taskInput">
+          <input type="text" data-hour="10" class="taskInput">
         </div>
 
         <div class="submit">
-          <button type="button"> Save</button>
+          <button type="button" class="saveBtn" data-btn="10"> Save</button>
         </div>
       </div>
       <div class="rows">
         <div class="hour">
-          <p><span class="time">11</span>00</p>
+          <p>11AM</p>
         </div>
         <div class="task">
-          <input type="text" class="taskInput">
+          <input type="text" data-hour="11" class="taskInput">
         </div>
 
         <div class="submit">
-          <button type="button"> Save</button>
+          <button type="button" class="saveBtn" data-btn="11"> Save</button>
         </div>
       </div>
       <div class="rows">
         <div class="hour">
-          <p><span class="time">12</span>00</p>
+          <p>12AM</p>
         </div>
         <div class="task">
-          <input type="text" class="taskInput">
+          <input type="text" data-hour="12" class="taskInput">
         </div>
 
         <div class="submit">
-          <button type="button"> Save</button>
+          <button type="button" class="saveBtn" data-btn="12"> Save</button>
         </div>
       </div>
       <div class="rows">
         <div class="hour">
-          <p> <span class="time">13</span>00</p>
+          <p>1PM</p>
         </div>
         <div class="task">
-          <input type="text" class="taskInput">
+          <input type="text" data-hour="13" class="taskInput">
         </div>
 
         <div class="submit">
-          <button type="button"> Save</button>
+          <button type="button" class="saveBtn" data-btn="13"> Save</button>
         </div>
       </div>
       <div class="rows">
         <div class="hour">
-          <p> <span class="time">14</span>00</p>
+          <p> 2PM</p>
         </div>
         <div class="task">
-          <input type="text" class="taskInput">
+          <input type="text" data-hour="14" class="taskInput">
         </div>
 
         <div class="submit">
-          <button type="button"> Save</button>
+          <button type="button" class="saveBtn" data-btn="14"> Save</button>
         </div>
       </div>
       <div class="rows">
         <div class="hour">
-          <p> <span class="time">15</span>00</p>
+          <p> 3PM</p>
         </div>
         <div class="task">
-          <input type="text" class="taskInput">
+          <input type="text" data-hour="15" class="taskInput">
         </div>
 
         <div class="submit">
-          <button type="button"> Save</button>
+          <button type="button" class="saveBtn" data-btn="15"> Save</button>
         </div>
       </div>
       <div class="rows">
         <div class="hour">
-          <p> <span class="time">16</span>00</p>
+          <p>4PM </p>
         </div>
         <div class="task">
-          <input type="text" class="taskInput">
+          <input type="text" data-hour="16" class="taskInput">
         </div>
 
         <div class="submit">
-          <button type="button"> Save</button>
+          <button type="button" class="saveBtn" data-btn="16"> Save</button>
         </div>
       </div>
       <div class="rows">
         <div class="hour">
-          <p> <span class="time">17</span>00</p>
+          <p> 5PM</p>
         </div>
         <div class="task">
-          <input type="text" class="taskInput">
+          <input type="text" data-hour="17" class="taskInput">
         </div>
 
         <div class="submit">
-          <button type="button"> Save</button>
+          <button type="button" class="saveBtn" data-btn="17"> Save</button>
         </div>
       </div>
     </main>
