--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
+    <div class='allBtn'>
+      <button type="button" class="saveAllBtn"> Save All</button>
+      <button type="button" class="clearAllBtn"> Clear All</button>
+    </div>
     <main class="timeBlocks">
       <!-- Timeblocks go here -->
       <div class="rows">
