changes to file locations and adding comments to files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./reset.css" />
+    <!-- stylesheet links -->
+    <link rel="stylesheet" href="./Assets/css/reset.css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -19,11 +20,13 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./Assets/css/style.css" />
+    <!-- title -->
     <title>Work Day Scheduler</title>
   </head>
 
   <body>
+    <!-- header section -->
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
@@ -33,15 +36,20 @@
       <button type="button" class="saveAllBtn"> Save All</button>
       <button type="button" class="clearAllBtn"> Clear All</button>
     </div>
+
+    <!-- shedule area -->
     <main class="timeBlocks">
-      <!-- Timeblocks go here -->
+      <!-- rows is each row -->
       <div class="rows">
+        <!-- hour section and time -->
         <div class="hour">
           <p>9AM</p>
         </div>
+        <!-- task input area for users -->
         <div class="task">
           <input type="text" data-hour="09" class="taskInput">
         </div>
+        <!-- submit button area -->
         <div class="submit">
           <button type="button" class="saveBtn" data-btn="09"> Save</button>
         </div>
@@ -143,9 +151,9 @@
         </div>
       </div>
     </main>
-
+    <!-- javascript sources -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="./script.js"></script>
+    <script src="./Assets/js/script.js"></script>
   </body>
 </html>
